--- a/VRChatLogWathcer/App.xaml
+++ b/VRChatLogWathcer/App.xaml
@@ -1,8 +1,6 @@
 ﻿<Application x:Class="VRChatLogWathcer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views\MainWindow.xaml"
-             Startup="Application_Startup">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
 
     </Application.Resources>
