--- a/VRChatLogWathcer/Views/MainWindow.xaml
+++ b/VRChatLogWathcer/Views/MainWindow.xaml
@@ -28,9 +28,10 @@
     </behaviors:EventTrigger>
 
     <!--  Dispose method is called, when Window closing.  -->
-    <behaviors:EventTrigger EventName="Closed">
+    <!--MEMO:VMは再利用されるため画面を閉じてもDisposeしない-->
+    <!--<behaviors:EventTrigger EventName="Closed">
       <l:DataContextDisposeAction />
-    </behaviors:EventTrigger>
+    </behaviors:EventTrigger>-->
 
     <!--  If you make user choose 'OK or Cancel' closing Window, then please use Window Close cancel Behavior.  -->
 
