--- a/VRChatLogWathcer/Views/MainWindow.xaml
+++ b/VRChatLogWathcer/Views/MainWindow.xaml
@@ -10,6 +10,7 @@
     xmlns:data="clr-namespace:VRChatLogWathcer.Data"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
     mc:Ignorable="d"
     Title="VRChat Lifelog"
@@ -46,6 +47,14 @@
   </behaviors:Interaction.Triggers>
 
   <Grid>
+    <Grid.Resources>
+      <Style TargetType="iconPacks:PackIconCoolicons">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0 0 5 0"/>
+        <Setter Property="Background" Value="Transparent"/>
+      </Style>
+    </Grid.Resources>
+    
     <Grid.RowDefinitions>
       <RowDefinition Height="25"/>
       <RowDefinition Height="*"/>
@@ -84,8 +93,10 @@
             </Style>
           </Grid.Resources>
 
+          <!--表示期間指定-->
           <Grid Grid.Row="0" Margin="0 0 0 5">
             <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="Auto"/>
               <ColumnDefinition Width="Auto"/>
               <ColumnDefinition Width="150"/>
               <ColumnDefinition Width="20"/>
@@ -99,12 +110,12 @@
               </Style>
             </Grid.Resources>
 
-            <!--表示期間指定-->
-            <CheckBox Grid.Column="0" IsChecked="{Binding FilterByDate.Value}" ToolTip="日付による絞り込みを有効にする"/>
-            <DatePicker Grid.Column="1" SelectedDate="{Binding First.Value}" ToolTip="検索範囲の開始日付"/>
-            <TextBlock Grid.Column="2" Text="~" 
+            <iconPacks:PackIconCoolicons Grid.Column="0" Kind="Calendar" ToolTip="日付"/>
+            <CheckBox Grid.Column="1" IsChecked="{Binding FilterByDate.Value}" ToolTip="日付による絞り込みを有効にする"/>
+            <DatePicker Grid.Column="2" SelectedDate="{Binding First.Value}" ToolTip="検索範囲の開始日付"/>
+            <TextBlock Grid.Column="3" Text="~" 
                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <DatePicker Grid.Column="3" SelectedDate="{Binding Last.Value}" ToolTip="検索範囲の終了日付"/>
+            <DatePicker Grid.Column="4" SelectedDate="{Binding Last.Value}" ToolTip="検索範囲の終了日付"/>
           </Grid>
 
           <!--検索対象人物-->
@@ -116,14 +127,16 @@
 
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="Auto"/>
+              <ColumnDefinition Width="Auto"/>
               <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <CheckBox Grid.Column="0" IsChecked="{Binding FilterByPerson.Value}" ToolTip="ユーザーによる絞り込みを有効にする"/>
-            <TextBox Grid.Column="1" Text="{Binding PersonQuery.Value}" VerticalContentAlignment="Center" ToolTip="ユーザー名"/>
+            <iconPacks:PackIconCoolicons Grid.Column="0" Kind="User" ToolTip="ユーザー"/>
+            <CheckBox Grid.Column="1" IsChecked="{Binding FilterByPerson.Value}" ToolTip="ユーザーによる絞り込みを有効にする"/>
+            <TextBox Grid.Column="2" Text="{Binding PersonQuery.Value}" VerticalContentAlignment="Center" ToolTip="ユーザー名"/>
 
             <!--あいまい検索用絞り込み-->
-            <ItemsControl Grid.Row="1" Grid.Column="1" ItemsSource="{Binding MatchedUserNames.Value}" MaxHeight="100" IsTabStop="False">
+            <ItemsControl Grid.Row="1" Grid.Column="2" ItemsSource="{Binding MatchedUserNames.Value}" MaxHeight="100" IsTabStop="False">
               <ItemsControl.ItemTemplate>
                 <DataTemplate>
                   <Button Content="{Binding}" Padding="2" Margin="0 2 3 0" Background="Transparent"
@@ -158,14 +171,16 @@
 
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="Auto"/>
+              <ColumnDefinition Width="Auto"/>
               <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <CheckBox Grid.Column="0" IsChecked="{Binding FilterByWorldName.Value}" ToolTip="ワールドによる絞り込みを有効にする"/>
-            <TextBox Grid.Column="1" Text="{Binding WorldNameQuery.Value}" VerticalContentAlignment="Center" ToolTip="ワールド名"/>
+            <iconPacks:PackIconCoolicons Grid.Column="0" Kind="LocationOutline" ToolTip="ワールド"/>
+            <CheckBox Grid.Column="1" IsChecked="{Binding FilterByWorldName.Value}" ToolTip="ワールドによる絞り込みを有効にする"/>
+            <TextBox Grid.Column="2" Text="{Binding WorldNameQuery.Value}" VerticalContentAlignment="Center" ToolTip="ワールド名"/>
 
             <!--あいまい検索用絞り込み-->
-            <ItemsControl Grid.Row="1" Grid.Column="1" ItemsSource="{Binding MatchedWorldNames.Value}" MaxHeight="100" IsTabStop="False">
+            <ItemsControl Grid.Row="1" Grid.Column="2" ItemsSource="{Binding MatchedWorldNames.Value}" MaxHeight="100" IsTabStop="False">
               <ItemsControl.ItemTemplate>
                 <DataTemplate>
                   <Button Content="{Binding}" Padding="2" Margin="0 2 3 0" Background="Transparent"
@@ -199,15 +214,30 @@
                 <Setter Property="Margin" Value="0 0 5 0"/>
               </Style>
             </StackPanel.Resources>
-            
-            <Button Content="絞り込み" Command="{Binding ApplyFilterCommand}"/>
-            <Button Content="写真を表示" Command="{Binding ShowPicturesTakenCommand}"
-                    ToolTip="ユーザーが写っている可能性のある写真一覧を表示します．"/>
+
+            <Button Command="{Binding ApplyFilterCommand}">
+              <StackPanel Orientation="Horizontal">
+                <iconPacks:PackIconCoolicons Kind="FilterOutline" Height="12"/>
+                <TextBlock Text="絞り込み"/>
+              </StackPanel>
+            </Button>
+            <Button Command="{Binding ShowPicturesTakenCommand}"
+                    ToolTip="絞り込み対象ユーザーが写っている可能性のある写真を一覧表示します．">
+              <StackPanel Orientation="Horizontal">
+                <iconPacks:PackIconCoolicons Kind="UserSquare" Height="12"/>
+                <TextBlock Text="写真を表示"/>
+              </StackPanel>
+            </Button>
           </StackPanel>
         </Grid>
       </GroupBox>
 
-      <Grid Grid.Row="1">
+      <Grid Grid.Row="1" Margin="5 0 5 5">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="*"/>
           <ColumnDefinition Width="Auto"/>
@@ -215,7 +245,19 @@
         </Grid.ColumnDefinitions>
 
         <!--場所の履歴情報-->
-        <DataGrid Grid.Column="0"
+        <Button Grid.Column="0"
+                Command="{Binding ShowPicturesTakenHereCommand}"
+                CommandParameter="{Binding SelectedLocationHistory.Value}"
+                ToolTip="選択した場所で撮影した写真を一覧表示します．"
+                Height="25" Width="220" HorizontalAlignment="Left"
+                Margin="0 0 0 5">
+          <StackPanel Orientation="Horizontal">
+            <iconPacks:PackIconCoolicons Kind="Image" Height="12"/>
+            <TextBlock Text="選択した場所で撮影した写真を表示"/>
+          </StackPanel>
+        </Button>
+
+        <DataGrid Grid.Row="1" Grid.Column="0"
                   ItemsSource="{Binding LocationHistories.Value}"
                   SelectedItem="{Binding SelectedLocationHistory.Value}"
                   IsReadOnly="True"
@@ -250,10 +292,13 @@
           </DataGrid.RowStyle>
         </DataGrid>
 
-        <GridSplitter Grid.Column="1" Width="5" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
+        <GridSplitter Grid.RowSpan="2" Grid.Column="1" Width="5" VerticalAlignment="Stretch" HorizontalAlignment="Center" Margin="3 0"/>
 
-        <!--滞在プレイヤー履歴情報-->
-        <DataGrid Grid.Column="2" ItemsSource="{Binding JoinLeaveHistories.Value}" IsReadOnly="True" AutoGenerateColumns="False">
+        <!--滞在プレイヤー履歴情報-->        
+        <DataGrid Grid.Row="1" Grid.Column="2"
+                  ItemsSource="{Binding JoinLeaveHistories.Value}"
+                  IsReadOnly="True"
+                  AutoGenerateColumns="False">
           <DataGrid.Columns>
             <DataGridTemplateColumn Header="Name">
               <DataGridTemplateColumn.CellTemplate>
